    - Always show the toolbarbutton when activating it
    - Fixed offline notifications
    - Use unique tab ids from SDK 1.14
    - Updating logging behaviour to match SDK 1.14
    - Fixed loading on startup
2.7
    - Whole new request handling. Should allow better experience with a lot of channels.
    - Better panel: displays title of stream and adapts the hover style to the channels style (customizeable!)
    - Added loading indicator to panel
    - Loading speed improvements and decreases (so expect it to be the same)
    - about:config only preferences for power users
    - Twitch re-added
2.7.1
    - Fetching channel statusses in as few requests as possible
    - Refreshing favorites in runtime
    - Small improovments to panel style
2.7.2
    - Fix justin.tv status requests
2.7.3
    - Fix getting user favorites with the fix from 2.7.2
    - Remove favorite channels when a user is removed
2.7.4
    - Fix a bug in the automatic user detection
2.8
    - Add a different notification for title changes
    - Fix twitch archive link
    - Add a context menu to channels in the panel
2.8.1
    - Fix random channels appearing
    - Fix notification muting when going backwards
2.8.2
    - Update button for australis
    - Fix a bug where channels were not removed when all the sources for them were removed
3.0.0
    - Add new channels manager, which is the last piece to allow more channel providers
    - Three new styles for the panel
    - Offline channels are in a separate tab instead of below the live channels in the panel
    - Context menu for channels in the panel, allowing to refresh their individual state, open their archive page if they're live or open the channel's chat only
    - Channels and users are now saved in a database instead of a plaintext file
    - Nearly every line of code in the extension has been rewritten
    - A completely new website
    - Added support for Hitbox, Ustream, Livestream and YouTube
