@@ -135,6 +135,16 @@ function ListView(live, style, chlist) {
         }).bind(this), channelId);
     }).bind(this));
     
+    function updateChannels(p) {
+        chlist.getChannelsByType(p, function(channels) {
+            providers[p].updateChannels(channels, function(channels) {
+                channels.forEach(function(channel) {
+                    chlist.setChannel(channel);
+                });
+            });
+        });
+    }
+
     this.panel.port.on("refresh", function(channelId) {
         if(channelId) {
             chlist.getChannel(function(channel) {
@@ -143,13 +153,7 @@ function ListView(live, style, chlist) {
         }
         else {
             for(var p in providers) {
-                chlist.getChannelsByType(p, function(channels) {
-                    providers[p].updateChannels(channels, function(channels) {
-                        channels.forEach(function(channel) {
-                            chlist.setChannel(channel);
-                        });
-                    });
-                });
+                updateChannels(p);
             }
         }
     });
