@@ -10,7 +10,6 @@ const { Channel, User }    = require('../channeluser');
 
 var type = "livestream",
     archiveURL = "/videos",
-    chatURL = "http://hitbox.tv/embedchat/",
     headers = {},
     baseURL = ".api.channel.livestream.com/2.0/";
 
@@ -42,7 +41,8 @@ const getLivestreamChannelInfo = function(username, callback) {
             ch.chatUrl = data.json.channel.link+"/chat";
             qs.queueRequest(getChannelAPIUrl(ch.login)+"latestclips.json?maxresults=1", headers, requeue, function(response) {
                 if(response.json && response.json.channel.item) {
-                    ch.thumbnail = response.json.channel.item[0].thumbnail["@url"];
+                    if(response.json.channel.item.length > 0)
+                        ch.thumbnail = response.json.channel.item[0].thumbnail["@url"];
                     callback(ch);
                 }
             });
