@@ -161,16 +161,45 @@ const Twitch = {
                     qs.queueRequest(data.json._links.next, headers, requeue, updateCbk);
                 }
                 else {
-                    channels.forEach(function(channel) {
-                        if(channel.live && !ret.find(function(cho) {
-                            return cho.login == channel.login;
-                        })) {
-                            channel.live = false;
-                            ret.push(channel);
-                        }
-                    });
-                    callback(ret);
-                    ret.length = 0;
+                    if(ret.length == channels.length) {
+                        callback(ret);
+                        ret.length = 0;
+                    }
+                    else {
+                        channels.forEach(function(channel) {
+                            if((channel.live && !ret.find(function(cho) {
+                                return cho.login == channel.login;
+                            })) || !channel.live) {
+                                qs.queueRequest("http://chatdepot.twitch.tv/rooms/"+channel.login+"/host_target", {}, requeue, function(data) {
+                                    if(data.json) {
+                                        if(!data.json.host_target) {                                    
+                                            channel.live = false;
+                                            ret.push(channel);
+        
+                                            if(ret.length == channels.length) {
+                                                callback(ret);
+                                                ret.length = 0;
+                                            }
+                                        }
+                                        else {
+                                            Twitch.updateChannel(data.json.host_target, function(hostedChannel) {
+                                                channel.live = hostedChannel.live;
+                                                channel.title = hostedChannel.title;
+                                                channel.thumbnail = hostedChannel.thumbnail;
+                                                channel.category = hostedChannel.category;
+                                                ret.push(channel);
+                                                
+                                                if(ret.length == channels.length) {
+                                                    callback(ret);
+                                                    ret.length = 0;
+                                                }
+                                            });
+                                        }
+                                    }
+                                });
+                            }
+                        });
+                    }
                 }
             }
         });
@@ -190,10 +219,25 @@ const Twitch = {
                     callback(channel);
                 });
             }
-            else {
+            else {                                
                 this.getChannelDetails(channelname, function(channel) {
-                    channel.live = false;
-                    callback(channel);
+                    qs.queueRequest("http://chatdepot.twitch.tv/rooms/"+channel.login+"/host_target", {}, requeue, function(data) {
+                        if(data.json) {
+                            if(!data.json.host_target) { 
+                                channel.live = false;
+                                callback(channel);
+                            }
+                            else {
+                                Twitch.updateChannel(data.json.host_target, function(hostedChannel) {
+                                    channel.live = hostedChannel.live;
+                                    channel.title = hostedChannel.title;
+                                    channel.thumbnail = hostedChannel.thumbnail;
+                                    channel.category = hostedChannel.category;
+                                    callback(channel);
+                                });
+                            }
+                        }
+                    });
                 });
             }
         }).bind(this));
@@ -233,16 +277,42 @@ const Twitch = {
                                         }).id;
                         return cho;
                     });
-                channels.forEach(function(channel) {
-                    console.info("twitch.updateChannels.onComplete:channels.forEach");
-                    if(channel.live && !ret.find(function(cho) {
-                        return cho.login == channel.login;
-                    })) {
-                        channel.live = false;
-                        ret.push(channel);
-                    }
-                });
-                callback(ret);
+                if(ret.length == channels.length) {
+                    callback(ret);
+                }
+                else {
+                    channels.forEach(function(channel) {
+                        if((channel.live && !ret.find(function(cho) {
+                            return cho.login == channel.login;
+                        })) || !channel.live) {
+                            qs.queueRequest("http://chatdepot.twitch.tv/rooms/"+channel.login+"/host_target", {}, requeue, function(data) {
+                                if(data.json) {
+                                    if(!data.json.host_target) {                                    
+                                        channel.live = false;
+                                        ret.push(channel);
+
+                                        if(ret.length == channels.length) {
+                                            callback(ret);
+                                        }
+                                    }
+                                    else {
+                                        Twitch.updateChannel(data.json.host_target, function(hostedChannel) {
+                                            channel.live = hostedChannel.live;
+                                            channel.title = hostedChannel.title;
+                                            channel.thumbnail = hostedChannel.thumbnail;
+                                            channel.category = hostedChannel.category;
+                                            ret.push(channel);
+                                            
+                                            if(ret.length == channels.length) {
+                                                callback(ret);
+                                            }
+                                        });
+                                    }
+                                }
+                            });
+                        }
+                    });
+                }
             }
         });
     }
